--- a/style.css
+++ b/style.css
@@ -5,6 +5,59 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+header {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+/* Navigation */
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1rem 6rem;
+  position: absolute;
+  z-index: 2;
+}
+.linkages {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.linkages ul {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+.linkages ul li a {
+  text-decoration: none;
+  font-size: 0.8rem;
+}
+.linkages button {
+  border: none;
+  padding: 0.2rem 0.5rem;
+  font-size: 0.8rem;
+}
+/* Carousel */
+.carousel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 60vh;
+  overflow: hidden;
+}
+.carousel img {
+  object-fit: cover;
+  object-position: 100% 100%;
+}
 .header {
   text-align: center;
   margin-bottom: 2rem;
