--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
   width: 100%;
   height: 100vh;
   position: relative;
+  /* overflow: hidden; */
 }
 /* Navigation */
 nav {
@@ -23,21 +24,25 @@ nav {
   justify-content: space-between;
   width: 100%;
   padding: 1rem 6rem;
-  position: absolute;
+  background-color: #7d2732;
   z-index: 2;
+}
+nav h1 {
+  color: white;
 }
 .linkages {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 1rem;
+  gap: 3rem;
 }
 .linkages ul {
   display: flex;
-  gap: 1rem;
+  gap: 3rem;
   margin-top: 1rem;
 }
 .linkages ul li a {
+  color: white;
   text-decoration: none;
   font-size: 0.8rem;
 }
@@ -46,18 +51,115 @@ nav {
   padding: 0.2rem 0.5rem;
   font-size: 0.8rem;
 }
+.signs {
+  display: flex;
+  gap: 1rem;
+}
+.signs button {
+  border-radius: 0.4rem;
+  background: transparent;
+  border: 1px solid rgb(240, 248, 255);
+  color: white;
+}
 /* Carousel */
 .carousel {
-  position: absolute;
   top: 0;
   left: 0;
-  height: 60vh;
+  height: fit-content;
   overflow: hidden;
 }
-.carousel img {
-  object-fit: cover;
-  object-position: 100% 100%;
+/* Slider in Header section */
+.client-talk {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 95%;
+  margin: 1rem auto;
+  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
 }
+.client {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  margin: 30px;
+}
+
+.sliding {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #7d2732;
+  border-radius: 2rem;
+  gap: -1rem;
+  overflow: hidden;
+  margin: 0.5rem 1rem;
+  cursor: pointer;
+  height: 12rem;
+  width: 12rem;
+}
+
+.sliding img {
+  width: 12rem;
+  height: 12rem;
+}
+@-webkit-keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-250px * 7));
+  }
+}
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-250px * 7));
+  }
+}
+.slider {
+  background: white;
+  height: fit-content;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+.slider::before,
+.slider::after {
+  /* background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%); */
+  content: "";
+  height: 25rem;
+  position: absolute;
+  width: 200px;
+  z-index: 2;
+}
+.slider::after {
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
+}
+.slider::before {
+  left: 0;
+  top: 0;
+}
+.slider .slide-track {
+  -webkit-animation: scroll 40s linear infinite;
+  animation: scroll 40s linear infinite;
+  display: flex;
+  width: calc(250px * 14);
+  height: fit-content;
+}
+.slider .slide {
+  height: fit-content;
+  width: 250px;
+}
+
+/* Products and Cards */
+
 .header {
   text-align: center;
   margin-bottom: 2rem;
@@ -102,3 +204,54 @@ nav {
   overflow: hidden scroll;
   font-size: 0.5rem;
 }
+/* @media (max-width: 920px) {
+  nav {
+    display: none;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0.3rem 1rem;
+    position: absolute;
+    z-index: 2;
+    background-color: red;
+    height: 100vh;
+    width: 100%;
+  }
+  nav h1 {
+    z-index: 4;
+  }
+  .linkages {
+    position: absolute;
+    right: 0;
+    top: 10vh;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+  }
+  .linkages ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1rem;
+    text-align: center;
+  }
+  .linkages ul li a {
+    text-decoration: none;
+    font-size: 0.8rem;
+  }
+  .linkages button {
+    border: none;
+    padding: 0.2rem 0.5rem;
+    font-size: 0.8rem;
+  }
+  .signs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+} */
